--- a/Portfolio_maker_back/package.json
+++ b/Portfolio_maker_back/package.json
@@ -33,10 +33,13 @@
     "dotenv": "^16.0.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
+    "nest-winston": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.36"
+    "typeorm": "^0.2.36",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
