--- a/Portfolio_maker_front/package.json
+++ b/Portfolio_maker_front/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.24.6",
     "react": "^18.0.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
@@ -17,13 +18,13 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
-    "tailwind-scrollbar-hide": "^1.1.7",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.6",
     "typescript": "^4.6.3",
     "vite": "^2.9.15"
