--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.24.10",
+    "@tanstack/react-query-devtools": "^4.24.10",
     "axios": "^1.3.3",
     "framer-motion": "^9.0.3",
     "react": "^18.0.0",
