feat(env): Set VITE_BASE_URL: http://pfmback-env-1.eba-cmbywf2u.ap-northeast-2.elasticbeanstalk.com

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 VITE_APP_TITLE=포토폴리오 메이커
-VITE_BASE_URL=http://localhost:5000
+VITE_BASE_URL=http://pfmback-env-1.eba-cmbywf2u.ap-northeast-2.elasticbeanstalk.com
+
 
 
 # Client Key for each API or Vendor.
