--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "@components/*": ["./src/components/*"],
       "@data/*": ["./src/data/*"],
       "@hooks/*": ["./src/hooks/*"],
+      "@libs/*": ["./src/libs/*"],
       "@models/*": ["./src/models/*"],
       "@pages/*": ["./src/pages/*"],
       "@store/*": ["./src/store/*"],
